# jaco2_contact_detection

./: README.md
contact_points_tranforms/: CMakeLists.txt  package.xml
contact_points_tranforms/config/: collision_points.yaml
contact_points_tranforms/launch/: contact_points_broadcaster.launch  contact_points_broadcaster_csapex.launch
contact_points_tranforms/src/: publish_static_tf_point_transforms.cpp
jaco2_contact_msgs/: CMakeLists.txt  package.xml
jaco2_contact_msgs/msg/: Jaco2CollisionDataSet.msg  Jaco2CollisionSample.msg  Jaco2CollisionSequence.msg  Jaco2ContactMsgs.msg
jaco2_contact_visualization/jaco2_contact_markers/: CMakeLists.txt  package.xml
jaco2_contact_visualization/jaco2_contact_markers/launch/: contact_markers.launch
jaco2_contact_visualization/jaco2_contact_markers/src/: jaco2_contact_markers_node.cpp
jaco2_surface_example/: CMakeLists.txt  package.xml
jaco2_surface_example/include/jaco2_surface_model/: link_surface.h
jaco2_surface_example/src/test/: jaco2_surface_model_test_node.cpp
jaco2_surface_model/: CMakeLists.txt  package.xml
jaco2_surface_model/cfg/: collision_points.yaml  collision_points_no_fingers.yaml  jaco2_surface_model.yaml  jaco2_surface_model_no_fingers.yaml
jaco2_surface_model/include/jaco2_surface_model/: contact_particle.h  parse_stl.h
jaco2_surface_model/jaco2_surface_meshes/: jaco2_finger.stl  jaco2_link_1.mtl  jaco2_link_1.stl  jaco2_link_2.mtl  jaco2_link_2.stl  jaco2_link_3.mtl  jaco2_link_3.stl  jaco2_link_4_5.mtl  jaco2_link_4_5.stl  jaco2_link_hand.mtl  jaco2_link_hand.stl
jaco2_surface_model/src/: parse_stl.cpp
jaco2_surface_model/src/test/: jaco2_surface_model_rotate_and_write.cpp  jaco2_surface_model_test_node.cpp
